Completed last section on the limitations of rational science

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -198,30 +198,48 @@ It is clear now that the cognitive act defines and constrains by necessity, the 
 \end{quote}
 
 \noindent
-Therefore, it is in the necessary nature of empirical cognition to allow us to apply mathematical intuition to it. The presence of Kant's transcendental elements allow the possibility of such mathematical intuition. And it is a third, derivative faculty of reason (which Kant properly introduces in the Transcendental Dialectic) -- that anticipates the preconditions of said cognitions, always searching for it's antecedent cause. It is this faculty of human reason which crowns the \emph{Critique} with its infamous title. Yet, this is also the name to which Kant then proceeds to censure, on the basis of reason's metaphysical limitations. For despite reason's empirical industry, it is lost outside the confines of possible experience. The ultimate brand of banishment is cast, when Kant demonstrates a series of dialectical conflicts of pure reason, termed the paralogisms, antinomies, and the theological ideal.
+Therefore, it is in the necessary nature of empirical cognition to allow us to apply mathematical intuition to it. The presence of Kant's transcendental elements allow the possibility of such mathematical intuition. And it is a third, derivative faculty of reason (which Kant properly introduces in the Transcendental Dialectic) -- that anticipates the preconditions of said cognitions, always searching for it's antecedent cause. It is this faculty of human reason which crowns the \emph{Critique} with its infamous title. Yet, this is also the name to which Kant then proceeds to censure, on the basis of reason's metaphysical limitations. For despite reason's empirical industry (which we do not doubt), it is lost outside the confines of possible experience. The ultimate brand of banishment is cast, when Kant demonstrates a series of dialectical conflicts of pure reason, termed the paralogisms, antinomies, and the theological ideal.
 
 % Whether or not metaphysical knowledge is limited by reason (?)
-These dialectical illusions all share a common form, which is an eventual proof that for such a given syllogism, pure reason can be coerced into proving the falsity of both possible options. Given the syllogism of "Either A is True, or B is True" (i.e. $A \lor B$), should both options be shown to be false, then neither option can be true as the result of falsifying it's antithesis. This results not in a contradiction, but rather yields alternate pairs of self-consistent theses and antitheses. This \emph{dialectic} (defined in the truest etymology of that word, \emph{δια-λεκτική}) is taken by Kant to be the final nail in the logic of pure reason, rendering it forever banished from the kingdom of metaphysics. But yet, is such a sentence truly just, for pure reason?
+These dialectical illusions all share a common form, which is an eventual proof that for such a given syllogism, pure reason can be coerced into proving the falsity of both possible options. Given the syllogism of "Either A is True, or B is True" (i.e. $A \lor B$), should both options be shown to be false, then neither option can be true as the result of rejecting it's antithesis. This results not in a contradiction, but rather yields alternate pairs of self-consistent theses and antitheses. This \emph{dialectic} (defined in the truest etymology of that word, \emph{δια-λεκτική}) is taken by Kant to be the final nail in the logic of pure reason, rendering it forever banished from the kingdom of metaphysics. But yet, is such a sentence truly just, for pure reason?
 
 \noindent
-The Kantian argument lies in the seemingly unreconcilable infinitude of arguments, supporting each thesis and antithesis -- always non-contradictory, but yet never true. The application of reason to metaphysics seems to open an infinite maw of endless dialectic, which leaves us never able to apodeictically solve the questions relating to experience, being, soul-hood, and God. It is this infinitude which denies certainty, and the denial of certainty which is reason's `crime.' Here for once, I \emph{categorically reject Kant's thesis.} I argue for an alternative perspective, one which vindicates reason in it's metaphysical utility, and restores it with honours back to our realm.
+The Kantian argument lies in the seemingly unreconcilable infinitude of arguments, supporting each thesis and antithesis -- always non-contradictory, but yet never true. The application of reason to metaphysics seems to open an infinite maw of endless dialectic, which leaves us never able to apodeictically solve the questions relating to experience, being, soul-hood, and God. It is this infinitude which denies certainty, and the denial of certainty which is the root of reason's `crime.' Here for once, I \emph{categorically reject Kant's thesis.} I argue for an alternative perspective, one which vindicates reason in it's metaphysical utility. I accept the self-consistent infinitude of pure reason in metaphysics, and deign to restore it back to it's place of honour.
 
 I present the body of my counterargument in the form of a parable\footnote{An Aesopic fable with animal characters was rejected upon editorial feedback.}, a tale with the name of "The Suicidal Mathematician."
 
 \begin{quote}
-  Once upon a time there was a young \textsc{Mathematician}, whose eyes were bright with spark and promise. One day, he sits in the class of a visiting \textsc{Professor}, a foreigner who presents a lecture on \emph{Gödel's Theorems of Incompleteness}. In the lecture hall, the \textsc{Professor} explains:
+  Once upon a time there was a young \textsc{Mathematician}, whose eyes were bright with spark and promise. One day, they sits in the class of a visiting \textsc{Professor}, a foreigner who presents a lecture on \emph{Gödel's Theorems of Incompleteness}.\footnote{Two theorems published by Kurt Gödel in 1931, which proves the incompleteness of all formal systems, including that of mathematics.} In the lecture hall, the \textsc{Professor} explains:
 
   "Using mathematics of the greatest rigour and exactitude, we have apodeictically proved that: \emph{there is no formal axiomatic system that can prove it's own consistency}. Any such proof will depend on \emph{axioms outside of the system itself}."
 
   Upon hearing this, the \textsc{Mathematician} pales with horror, trembling all over with fear. For surely, if no axiomatic system can prove itself, then all of mathematics is baseless and false! Mathematics will always yield consistent, non-contradictory theorems, that yet can never be proven.
 
-  Haunted by this knowledge, the young \textsc{Mathematician} flees the lecture hall, and loses all hope in life. After a month of drink and abandon, the \textsc{Mathematician} resolves to end their life.
+  Haunted by this knowledge, the young \textsc{Mathematician} flees the lecture hall, and loses all hope and confidence. After a month of abject despair, the \textsc{Mathematician} resolves to end their life.
 
-  Perched atop the parapets of their Mathematics department, the \textsc{Mathematician} is just about to jump, when he is swiftly plucked off the ledge by a stranger. It is the \textsc{Professor!}
+  Perched atop the parapets of their mathematics department, the \textsc{Mathematician} is just about to jump, when they are swiftly plucked off the ledge by a stranger. It is the \textsc{Professor}!
 
-  "Why do you wish to kill yourself, my student?" asks the \textsc{Professor}. The young \textsc{Mathematicians} blushes, and explains their thoughts from above. The \textsc{Professor} chuckles, and sits down to explain:
+  "What is the meaning of this?" asks the \textsc{Professor}. The young \textsc{Mathematicians} blushes, and explains their thoughts from above. The \textsc{Professor} chuckles, and sits down to explain:
 
-  "\emph{Gödel's Theorems of Incompleteness} is not a proof of mathematic's falsehood", he says. "But rather, it is a proof \emph{mathematics is infinite}."
+  % Mark 1
+  "\emph{Gödel's Theorems of Incompleteness} is not a proof of mathematic's falsehood", the \textsc{Professor} says. "But rather, it is a proof of \emph{mathematics infinitude}."
+
+  "For while you can never prove the truth-hood of a system entirely from within, there will always be an outside axiom that when granted, yields apodeictic certainty for the system."
+
+  "Such `outside axioms' are not arbitrary choices, but are rather the self-consistent parts of even greater axiomatic systems which encompasses the former."
+
+  % Mark 2
+  "But surely these greater systems are still themselves unprovable, and hence incomplete?!" sobs the young \textsc{Mathematician} in reply.
+
+  "Ah, but you see -- that's the beauty of it. There will always be greater systems, stretching on in an infinite series. And each system yields a whole universe of math, each as self-consistent and true as the other."
+
+  % Mark 3
+  "Gödel's Theorems show us that mathematics is not a closed loop, a shallow pond, finite in it's shores. But rather, it is an endless ocean, infinite in scope -- bounded only by the heights of human potential."
+
+  With that parting thought, the young \textsc{Mathematician} is enlightened, and the \textsc{Professor} leaves them to their thoughts.
 \end{quote}
+
+\noindent
+Thus my perspective is the same. Although Kant is correct that the apodeictic certainty of reason will never yield an absolute metaphysics, these dialectical illusions are not mere sophistries. But rather, they are dual pairs of axiomatic systems, which depend on each other. Self-consistent within themselves, but yet unable to demonstrate their own certainty from within them. Hence the refutation of any thesis with it's twin antithesis requires `outside axioms' from it's twin. Thus, this makes the application of reason to metaphysics not \emph{false}, as is the Kantian argument. But rather, it makes metaphysics \emph{infinite}. The exploration of the very nature of \emph{existence}, \emph{being}, and \emph{God} is not a closed loop or shallow pond. But rather, "it is an endless ocean, infinite in scope -- bounded only by the heights of human potential."
 
 % Note: the conclusion is located at ./sections/conclusion.tex
