Changed title to 'Limitations of Rational Metaphysics'

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -187,7 +187,7 @@ Subscribing to such a gentle `plausible thesis' (even though such concessions to
 \noindent
 For consider the following hypothesis (this paragraph takes the form of a proof via \emph{reductio}). Let there be given a \emph{finite}, thinking being -- those a priori forms of intuition consist not of space nor time. Instead, it is capable of fulfilling all the sensory precepts of an objective intuition without said limitation (i.e. it is not simply insensate). Let it be further granted that such a creature is fully capable of the synthetic unity of apperception, viz. it is fully self-aware. What manner of a creature is this? It is a Flatlandian creature, the solipsistic Monarch of Pointland, a denizen of Edwin Abbott's novella.\footnote{In the novel \emph{Flatland: A Romance of Many Dimensions}, the protagonist (a Square) lives in a 2-dimensional world. During the course of their adventures, they ultimately visit `Pointland' -- inhabited by a single Point, who perceives all others as thoughts originating in his own mind.} Sensate, but yet neither in space nor time, such a creature perceives all sensation as thoughts originating in his own mind. The lack of a spatial intuition by necessity abolishes the \emph{outer sense}, which makes all objective perception a part of the self. Likewise, the lack of a temporal intuition by necessity abolishes the inner sense -- as well as to make all occurrences simultaneous, and concurrent. Such a creature -- who exists as it's existence has been granted -- is by it's very nature is not a \emph{finite} thinking being. To perceive all as a part of the self, separated neither by distance, nor by time -- is to be an infinite, eternal being. Thus completes the arc of this proof via \emph{reductio}, and the demonstration is complete. The proposition is that all finite thinking beings must cognise through the a priori forms of space, and time.
 
-\section*{The Limitations of Rational Science}
+\section*{The Limitations of Rational Metaphysics}
 % The objective/subjective nature of the empirical sciences
 It is clear now that the cognitive act defines and constrains by necessity, the very boundaries of what the cognitive agent (i.e. the knowing being) can know. While we are unable to generate any meaningful knowledge about the \emph{`thing-in-itself'} (the phrase which Kant uses to refer to objects outside of the intuitive forms), Kant demonstrates quite consistently throughout the \emph{Critique} that our knowledge is still empirical. Indeed, it is his very thesis that the broad applicability of mathematics to the natural world is due to his very transcendental construction. The gist of his argument can be found summarised in his \emph{Prolegomena to Any Future Metaphysics}:
 
