Edited conclusion for flow

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -240,6 +240,6 @@ I present the body of my counterargument in the form of a parable\footnote{An Ae
 \end{quote}
 
 \noindent
-Thus my perspective is the same. Although Kant is correct that the apodeictic certainty of reason will never yield an absolute metaphysics, these dialectical illusions are not mere sophistries. But rather, they are dual pairs of axiomatic systems, which depend on each other. Self-consistent within themselves, but yet unable to demonstrate their own certainty from within them. Hence the refutation of any thesis with it's twin antithesis requires `outside axioms' from it's twin. Thus, this makes the application of reason to metaphysics not \emph{false}, as is the Kantian argument. But rather, it makes metaphysics \emph{infinite}. The exploration of the very nature of \emph{existence}, \emph{being}, and \emph{God} is not a closed loop or shallow pond. But rather, "it is an endless ocean, infinite in scope -- bounded only by the heights of human potential."
+Hence my perspective is the same. Although Kant is correct that the apodeictic certainty of reason will never yield an absolute metaphysics, these dialectical illusions are not mere sophistries. But rather, they are dual pairs of axiomatic systems, which depend on each other. Self-consistent within themselves, but yet unable to demonstrate their own certainty from within them. Hence the refutation of any thesis with it's twin antithesis requires `outside axioms' from it's twin. Thus, this makes the application of reason to metaphysics not \emph{false}, as is the Kantian argument. But rather, it makes metaphysics \emph{infinite}. The exploration of the very nature of \emph{existence}, \emph{being}, and \emph{God} is not a closed loop or shallow pond. But rather, "it is an endless ocean, infinite in scope -- bounded only by the heights of human potential."
 
 % Note: the conclusion is located at ./sections/conclusion.tex
