Added pagebreaks for better structure

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,5 +1,5 @@
 \section*{The Transcendental Aesthetic}
-Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this springboard of aesthetics, where Kant begins the Copernican leap that upturns our world.
+Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this springboard of aesthetics, where Kant begins his Copernican leap.
 
 For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects\footnote{Cognitions arise from the union of understanding with sensibility. Kant explores this in further detail starting at the transcendental analytic.}, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}.\footnote{Kant defines intuition in part, as a direct presentation of an object. This is in contrast to concepts, which are only presentations of intuitions.} However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
 
@@ -53,6 +53,8 @@ However, such a border is not a destructive one. These constraints of the sensib
 It is this very generality, to which Kant takes as the foundation for mathematical intuition. Does it now follow that the universal applicability of mathematics rest in the foundation of these a priori forms behind intuition? Although some may think that the foundation of mathematics is secure now (to which we may close Kant's \emph{Critique} forever), I caution that the mere existence of a priori forms behind intuition is not enough to sufficiently explain mathematical reasoning. For intuition serves only as the means in which we \emph{perceive} (lit. intuit) empirical objects, not as a means in which we \emph{understand} them. Mathematics deals not just with the intuitive process of appearances (i.e. the appearance of a triangle, that of a derivative), but also a discursive process of seeking the possibility of appearance (i.e. the creation of proofs, application of theorems). Such an act of seeking the possibility of appearance relies not merely on the a priori forms behind possible intuition, but also upon certain acts of understanding, which can only be found in the \emph{transcendental logic}. Hence, the transcendental aesthetic by itself is insufficient to explain the universal applicability of mathematics. In order to truly understand the broad utility of mathematical thought, we must turn to Kant's \emph{transcendental logic}, which we will in due course.
 
 Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvellous one. It's metaphysical duality: the synthetic a prioriae both empirically real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Materialism\footnote{A philosophical school of thought which rejects metaphysics altogether, basing all knowledge on empirical intuition.} and Idealism, while avoiding the nihilistic excesses of both. Such a treatment on general aesthetic intuition already establishes a foundation to mathematical intuition, which is indeed highly spatial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
+
+\clearpage
 
 \begin{quote}
   There is, moreover, no need for us to limit this kind of intuition -- intuition in space and time -- to the sensibility of man. It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard.
@@ -160,6 +162,8 @@ This transcendental process, in which the presence of the subject (in the form o
 
 \noindent
 Thus concludes Kant's treatment synthetic unity of apperception, the only means in which cognition (including objective cognition) can arise. It is the synthesising process of the transcendental elements of sensibility (aesthetics) and understanding (logic), that is only possible "through the necessary reference of the manifold of intuition to the one [self]" \autocite[B140]{hackett}.
+
+\clearpage
 
 \section*{The Kantian Theory of Mind}
 We are now at the summit. The rarefied atmosphere of these transcendental heights have melted away all contingency. These transcendental elements, like the rays of an ascendent sun, shine brilliantly upon our visage, unobstructed by the smog and haze of a posteriori pollution. Our journey was a difficult ascent, one which leaves us with a breathless countenance -- weary from the exertions of our guide's transcendental analytic. And speaking of which \ldots\ where \emph{is} our guide? Look up and turn around! -- but alas, he's nowhere to be seen. We're left alone, with these precepts, and only the ghost of a smile as our transcendental Virgil leaves us. There are further peaks, and farther ranges\footnote{The transcendental dialectic in particular, forms the bulk of Kant's remaining treatise -- but it is only an exposition of the consequences of the analytic. We will only reference it's findings.} -- but none matter to us now, other than the view which is ahead. It is now time to contemplate.
