--- a/latex/sections/conclusion.tex
+++ b/latex/sections/conclusion.tex
@@ -1,3 +1,4 @@
+\clearpage
 \section*{Conclusion}
 The sun is setting now, and the thin, transcendental atmosphere of these peaks howl with a cold wind. As the last rays of the sun give away to the glow of an ascendent moon, the full scope of this Kantian island comes into view. It's rather befitting of a \emph{Spirit-Seer},\footnote{\emph{Dreams of a Spirit-Seer}, an early work by Kant which predates the \emph{Critique} by several decades.} for the contours of their island to resolve best only through moonlight. We have travelled far in this journey, and although our guide is gone -- the way back home is as clear and as `apodeictically' certain, as a Kantian demonstration. In our journey in this land of metaphysics, we traversed the slopes of the transcendental aesthetic, finding out the a priori forms behind all sensible intuition. These forms serve as the necessary prerequisite for mathematical intuition, even if they do not extend as much to mathematical cognition. We are then lead to the even higher mountain, of a transcendental logic, in which we examine the origin of categories, that a priori element of pure understanding. The ascent is a difficult one, an act of technical mountaineering assisted by a leap from concepts to judgement, and from judgement to category. Even so, it is not a leap unscathed, for the completeness of Kant's table of judgements is still yet perfect -- even though it suffices for our path. Well above the snow line now, we finally prepare to summit -- reaching the ultimate pinnacle of the synthetic unity of apperception. It is here in which we finally catch our breath, and delve into the nature of self-awareness, finite beings, and the nature of cognitive agents.
 
