--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -54,8 +54,6 @@ It is this very generality, to which Kant takes as the foundation for mathematic
 
 Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvellous one. It's metaphysical duality: the synthetic a prioriae both empirically real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Materialism\footnote{A philosophical school of thought which rejects metaphysics altogether, basing all knowledge on empirical intuition.} and Idealism, while avoiding the nihilistic excesses of both. Such a treatment on general aesthetic intuition already establishes a foundation to mathematical intuition, which is indeed highly spatial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
 
-\clearpage
-
 \begin{quote}
   There is, moreover, no need for us to limit this kind of intuition -- intuition in space and time -- to the sensibility of man. It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard.
 
@@ -163,8 +161,6 @@ This transcendental process, in which the presence of the subject (in the form o
 \noindent
 Thus concludes Kant's treatment synthetic unity of apperception, the only means in which cognition (including objective cognition) can arise. It is the synthesising process of the transcendental elements of sensibility (aesthetics) and understanding (logic), that is only possible "through the necessary reference of the manifold of intuition to the one [self]" \autocite[B140]{hackett}.
 
-\clearpage
-
 \section*{The Kantian Theory of Mind}
 We are now at the summit. The rarefied atmosphere of these transcendental heights have melted away all contingency. These transcendental elements, like the rays of an ascendent sun, shine brilliantly upon our visage, unobstructed by the smog and haze of a posteriori pollution. Our journey was a difficult ascent, one which leaves us with a breathless countenance -- weary from the exertions of our guide's transcendental analytic. And speaking of which \ldots\ where \emph{is} our guide? Look up and turn around! -- but alas, he's nowhere to be seen. We're left alone, with these precepts, and only the ghost of a smile as our transcendental Virgil leaves us. There are further peaks, and farther ranges\footnote{The transcendental dialectic in particular, forms the bulk of Kant's remaining treatise -- but it is only an exposition of the consequences of the analytic. We will only reference it's findings.} -- but none matter to us now, other than the view which is ahead. It is now time to contemplate.
 
@@ -210,9 +206,10 @@ These dialectical illusions all share a common form, which is an eventual proof 
 \noindent
 The Kantian argument lies in the seemingly unreconcilable infinitude of arguments, supporting each thesis and antithesis -- always non-contradictory, but yet never true. The application of reason to metaphysics seems to open an infinite maw of endless dialectic, which leaves us never able to apodeictically solve the questions relating to experience, being, soul-hood, and God. It is this infinitude which denies certainty, and the denial of certainty which is the root of reason's `crime.' Here for once, I \emph{categorically reject Kant's thesis.} I argue for an alternative perspective, one which vindicates reason in it's metaphysical utility. I accept the self-consistent infinitude of pure reason in metaphysics, and deign to restore it back to it's place of honour.
 
-I present the body of my counterargument in the form of a parable\footnote{An Aesopic fable with animal characters was rejected upon editorial feedback.}, a tale with the name of "The Suicidal Mathematician."
+I present the body of my counterargument in the form of a parable\footnote{An Aesopic fable with animal characters was rejected upon editorial feedback.}, a tale with the name of \emph{The Suicidal Mathematician.}
 
 \begin{quote}
+  \subsubsection*{The Parable of the Suicidal Mathematician}
   Once upon a time there was a young \textsc{Mathematician}, whose eyes were bright with spark and promise. One day, they sits in the class of a visiting \textsc{Professor}, a foreigner who presents a lecture on \emph{Gödel's Theorems of Incompleteness}.\footnote{Two theorems published by Kurt Gödel in 1931, which proves the incompleteness of all formal systems, including that of mathematics.} In the lecture hall, the \textsc{Professor} explains:
 
   "Using mathematics of the greatest rigour and exactitude, we have apodeictically proved that: \emph{there is no formal axiomatic system that can prove it's own consistency}. Any such proof will depend on \emph{axioms outside of the system itself}."
