--- a/latex/kant-aufsatz.tex
+++ b/latex/kant-aufsatz.tex
@@ -32,7 +32,7 @@
 
 % Document Metadata
 \title{
-  \textbf{\textsc{A Tourist's Journal \\ of the Critique:}} \\ Adventures in the Land of Transcendental Metaphysics
+  \textbf{\textsc{A Tourist's Journal \\ of the Critique:}} \\ A Hike with Kant in the Land of \\ Transcendental Metaphysics
 }
 \author{
   By Shen Zhou Hong \and St. John's College
@@ -42,8 +42,8 @@
 % Document Begins
 \begin{document}
 \maketitle
-\tableofcontents
-\clearpage
+% \tableofcontents
+% \clearpage
 
 % Includes content body. If the essay is very long, it might make sense to split
 % the content across multiple .tex files, and include them all here, e.g.
